fixed spelling errors

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
        
     </div>
-    <script defer src="./scripts.js"></script>
-    <script defer src="./initialData.js"></script>
+    <script defer src="initialData.js"></script>
+        <script type="module" src="./scripts.js"></script>
   </body>
 </html>
