fixed initialTask not importing from initaldata js

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </dialog>
     </div>
 
-    <script defer src="./initialData.js"></script>
+    <script src="./initialData.js"></script>
     <script type="module" src="./scripts.js"></script>
   </body>
 </html>
