added styling and flex for modal

--- a/index.html
+++ b/index.html
@@ -66,11 +66,12 @@
 
       <!-- Modal -->
       <dialog id="task-modal">
-        <h3>Task</h3>
-        <button id="close-modal-btn">Close</button>
-
-        <label for="task-title">Title</label>
-        <input id="task-title" />
+        <div class="flex">
+          <h3>Task</h3>
+          <button id="close-modal-btn">Close</button>
+        </div>
+          <label for="task-title">Title</label>
+          <input id="task-title" />
 
         <label for="task-desc">Description</label>
         <textarea id="task-desc" rows="4"></textarea>
