added JDoc comments for understanding

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <dialog id="task-modal">
         <div class="flex">
           <h3>Task</h3>
-          <button id="close-modal-btn">Close</button>
+          <button id="close-modal-btn">❌</button>
         </div>
           <label for="task-title">Title</label>
           <input id="task-title" />
