removed comment lines

--- a/index.html
+++ b/index.html
@@ -78,10 +78,9 @@
 
         <label for="task-status">Status</label>
         <select id="task-status">
-          <!-- ✅ Changed options to match your JS: todo, doing, done -->
-          <option value="todo">To Do</option>
-          <option value="doing">Doing</option>
-          <option value="done">Done</option>
+          <option value="todo">todo</option>
+          <option value="doing">doing</option>
+          <option value="done">done</option>
         </select>
       </dialog>
     </div>
